--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cost Plan for Online Platform</title>
+    <title>Cost Plan</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -33,8 +33,7 @@
 
     <div class="container mx-auto p-4 sm:p-6 lg:p-8">
         <header class="text-center mb-12">
-            <h1 class="text-4xl md:text-5xl font-extrabold text-[#073B4C] mb-2">Comprehensive Cost Plan</h1>
-            <p class="text-lg text-[#118AB2]">For Your Online Test Portal & Course Platform</p>
+            <h1 class="text-4xl md:text-5xl font-extrabold text-[#073B4C] mb-2">Cost Plan</h1>
         </header>
 
         <main>
